--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
         "purpose" : "any maskable"
       }
     ],
-    "start_url": "/?source=pwa",
+    "start_url": "https://github.com/NunoGuimaraes1/NunoGuimaraes1.github.io",
     "background_color": "#3367D6",
     "display": "standalone",
     "scope": "/",
